add hook service spec + faq to site

--- a/apps/site/src/_pages/docs/3_spec/00_index.mdx
+++ b/apps/site/src/_pages/docs/3_spec/00_index.mdx
@@ -34,10 +34,7 @@ Each **service specification** defines _what_ applications and blocks communicat
 Each specification is versioned separately, allowing them to evolve independently.
 Any reference to the ‘protocol version’ should be read as _the version of the core specification_.
 
-Separate core and service specifications were introduced in version 0.2 of the Block Protocol, with both the
-[core specification](/docs/spec/core) and [the first service specification](/docs/spec/graph-service)
-starting on version 0.2 in recognition of how they each are an iteration of requirements
-that were previously specified in version 0.1.
+Separate core and service specifications were introduced in version 0.2 of the Block Protocol.
 
 ### Overview
 
