--- a/apps/site/src/_pages/docs/3_spec/03_hook-service.mdx
+++ b/apps/site/src/_pages/docs/3_spec/03_hook-service.mdx
@@ -114,7 +114,7 @@ There are only two messages in the hook service: the `hook` request from the blo
 
 ### <Hidden>Message definitions </Hidden>Specification
 
-The messages available for exchange in the graph service are defined in the [service's JSON definition](https://github.com/blockprotocol/blockprotocol/blob/main/packages/%40blockprotocol/hook/src/hook-service.json#L5) and are also
+The messages available for exchange in the hook service are defined in the [service's JSON definition](https://github.com/blockprotocol/blockprotocol/blob/main/packages/%40blockprotocol/hook/src/hook-service.json#L5) and are also
 listed below for ease of reference.
 
 <HookServiceMessageList />
