--- a/apps/site/src/_pages/docs/4_faq.mdx
+++ b/apps/site/src/_pages/docs/4_faq.mdx
@@ -187,7 +187,7 @@ One way of representing entities in a machine-readable way is in [JSON-LD](https
 ```
 
 The structure of entities in the Block Protocol are described by JSON schema, and we encourage these to be
-mapped to terms which can be used to construct a JSON-LD representation of the entity,
+[mapped to terms which can be used to construct a JSON-LD representation of the entity],
 which embedding applications can include in the page's markup.
 
 </FAQ>
