Improvements to FAQ (#675)
* Adds invitation to EAs to list selves on the site

* Remove nonexistent link detritus

--- a/apps/site/src/_pages/docs/4_faq.mdx
+++ b/apps/site/src/_pages/docs/4_faq.mdx
@@ -85,7 +85,7 @@ The Block Protocol advances HASH’s mission by encouraging both data itself and
 
 Blocks can be [published on the Hub](/docs/developing-blocks#publishing) to make them browsable on [blockprotocol.org](/hub), and to make their metadata and source code available via our API.
 
-Entity data can be hosted in any application which implements the Block Protocol - we are developing one such application, [HASH](https://hash.ai/platform/hash), which will be in public beta in Q3 2022.
+Entity data can be hosted in any application which implements the Block Protocol (e.g. [HASH](https://hash.ai/platform/hash)). _If you are developing an embedding application you would like listed here, please get in touch._
 
 </FAQ>
 
@@ -173,9 +173,7 @@ One way of representing entities in a machine-readable way is in [JSON-LD](https
 }
 ```
 
-The structure of entities in the Block Protocol are described by JSON schema, and we encourage these to be
-[mapped to terms which can be used to construct a JSON-LD representation of the entity],
-which embedding applications can include in the page's markup.
+The structure of entities in the Block Protocol are described by JSON schema, and we encourage these to be mapped to terms which can be used to construct a JSON-LD representation of the entity, which embedding applications can include in the page's markup.
 
 </FAQ>
 
