--- a/apps/site/src/_pages/docs/3_spec/03_hook-service.mdx
+++ b/apps/site/src/_pages/docs/3_spec/03_hook-service.mdx
@@ -41,7 +41,7 @@ If the embedding application **supports** the requested hook type:
 
 If the embedding application **does not** **support** the requested hook type, it MUST respond with an error with a code of `NOT_IMPLEMENTED`.
 
-If any of the required data is missing from the `hook` message, the emebdding application MUST respond with an error with a code of `INVALID_INPUT`.
+If any of the required data is missing from the `hook` message, the embedding application MUST respond with an error with a code of `INVALID_INPUT`.
 
 ## Updating hooks
 
