--- a/apps/site/src/_pages/docs/1_developing-blocks.mdx
+++ b/apps/site/src/_pages/docs/1_developing-blocks.mdx
@@ -217,6 +217,6 @@ You can update your published block at any time by running
 
 - Take a screenshot of your block in action and replace `public/block-preview.png`
 - update the `description` in package.json
-- add an icon to `public/` and update `blockprotocol.icon` in `package.json`
+- add an icon to the `public` folder and update `blockprotocol.icon` in `package.json`
 - update your block’s `README.md` – it will appear below your block on its hub page
 - update the example object in `blockprotocol.examples` in `package.json`
