--- a/apps/site/src/_pages/docs/1_developing-blocks.mdx
+++ b/apps/site/src/_pages/docs/1_developing-blocks.mdx
@@ -202,7 +202,7 @@ To publish a block on the Hub take the following steps.
 
 ### In your terminal
 
-- Run `npm run build` or `yarn build` to create a production build of your block (it will appear in the `dist/` folder)
+- Run `npm run build` or `yarn build` to create a production build of your block (it will appear in the `dist` folder)
 - run `npx blockprotocol@latest publish` to generate a `.blockprotocolrc` file when prompted
 - Replace the placeholder key in that file with your API key
 - now run `npx blockprotocol@latest publish` again
