use absolute links everywhere in docs markdown

--- a/apps/site/src/_pages/docs/0_index.mdx
+++ b/apps/site/src/_pages/docs/0_index.mdx
@@ -6,10 +6,10 @@ The Block Protocol is an open standard for building block-based interfaces. It e
 
 The following pages provide a practical introduction for developers who want to:
 
-- [develop blocks](/docs/developing-blocks) and publish them to the [Hub](/hub)
-- [embed blocks](/docs/embedding-blocks) within an application
+- [develop blocks](https://blockprotocol.org/docs/developing-blocks) and publish them to the [Hub](https://blockprotocol.org/hub)
+- [embed blocks](https://blockprotocol.org/docs/embedding-blocks) within an application
 
-If you have any questions, [please open or contribute to a discussion](https://github.com/blockprotocol/blockprotocol/discussions). You can also [chat to us on Discord](/discord).
+If you have any questions, [please open or contribute to a discussion](https://github.com/blockprotocol/blockprotocol/discussions). You can also [chat to us on Discord](https://blockprotocol.org/discord).
 
 ## What is a block?
 
@@ -29,6 +29,6 @@ Any block can become a Block Protocol block by meeting the requirements defined 
 
 Following these requirements allows BP blocks to do more than regular web blocks. This standardized way of handling data makes it possible to embed BP blocks across different web applications. BP blocks can read and write data to the applications they're embedded within without any extra setup or custom integrations (as long as both the block and embedding application adhere to the specification).
 
-BP blocks can also be published on the [Hub](/hub) – an open-source registry where anyone can publish their blocks for other people to discover and use.
+BP blocks can also be published on the [Hub](https://blockprotocol.org/hub) – an open-source registry where anyone can publish their blocks for other people to discover and use.
 
-Any application can accept BP blocks, as long as they follow the [requirements for embedding applications](/docs/embedding-blocks).
+Any application can accept BP blocks, as long as they follow the [requirements for embedding applications](https://blockprotocol.org/docs/embedding-blocks).
