--- a/apps/site/src/_pages/docs/2_embedding-blocks.mdx
+++ b/apps/site/src/_pages/docs/2_embedding-blocks.mdx
@@ -6,4 +6,4 @@
 
 We are actively looking for embedding application partners who would like to extend their interfaces with blocks.
 
-Please reach out via the [contact form](/contact) and we will be in touch.
+Please reach out via the [contact form](https://blockprotocol.org/contact) and we will be in touch.
