--- a/apps/site/src/_pages/docs/3_spec/00_index.mdx
+++ b/apps/site/src/_pages/docs/3_spec/00_index.mdx
@@ -27,7 +27,7 @@ It defines how structured data is passed between blocks and embedding applicatio
 
 The Block Protocol is split into a core specification and service specifications.
 
-The [core specification](/docs/spec/core) sets out how blocks should be defined, how services are defined, how embedding applications should initialize blocks, and _how_ applications and blocks communicate.
+The [core specification](https://blockprotocol.org/docs/spec/core) sets out how blocks should be defined, how services are defined, how embedding applications should initialize blocks, and _how_ applications and blocks communicate.
 
 Each **service specification** defines _what_ applications and blocks communicate. A service is a logical grouping of messages blocks and applications may exchange.
 
