--- a/apps/site/src/_pages/docs/3_spec/99_rfcs_and_roadmap.mdx
+++ b/apps/site/src/_pages/docs/3_spec/99_rfcs_and_roadmap.mdx
@@ -99,4 +99,4 @@ This does, however, mean there is a possibility of competing schemas attempting 
 
 The ability to translate between schemas would help - e.g. some way expressing an equivalence relationship between properties in different schema. This might be a keyword such as `sameAs` or `equivalentTo` mapping between schemas and their properties. Then, either blocks or embedding applications could programmatically translate between schemas.
 
-Note that this is about translating between different JSON Schemas, and is not to be confused with the process of translating JSON schema to schema.org (and equivalent) types, which has an established technical approach mentioned **[here](/docs/faq#how-does-the-block-protocol-advance-the-semantic-web)**.
+Note that this is about translating between different JSON Schemas, and is not to be confused with the process of translating JSON schema to schema.org (and equivalent) types, which has an established technical approach mentioned **[here](https://blockprotocol.org/docs/faq#how-does-the-block-protocol-advance-the-semantic-web)**.
