Link to core spec from graph service page

--- a/apps/site/src/_pages/docs/3_spec/02_graph-service.mdx
+++ b/apps/site/src/_pages/docs/3_spec/02_graph-service.mdx
@@ -1,6 +1,6 @@
 # Graph Service
 
-This document (version 0.2) defines a **graph service** according to the terms set out in the core specification.
+This document (version 0.2) defines a **graph service** according to the terms set out in the [core specification](https://blockprotocol.org/docs/spec/core).
 
 The graph service describes how **entities** can be created, queried, updated, and linked together – including the **block entity**, represented by the **properties** sent to the block.
 
