Link to core spec from hook service page

--- a/apps/site/src/_pages/docs/3_spec/03_hook-service.mdx
+++ b/apps/site/src/_pages/docs/3_spec/03_hook-service.mdx
@@ -1,6 +1,6 @@
 # Hook Service
 
-This document (version 0.1) defines a **hook service** according to the terms set out in the core specification.
+This document (version 0.1) defines a **hook service** according to the terms set out in the [core specification](https://blockprotocol.org/docs/spec/core).
 
 Under the hook service, a block can invite embedding application to take over the rendering of an element within the block (the **hook**), allowing embedding applications to provide users with application-specific **views** of specific data types without the block needing to know about them.
 
