--- a/apps/site/src/_pages/docs/1_developing-blocks.mdx
+++ b/apps/site/src/_pages/docs/1_developing-blocks.mdx
@@ -125,7 +125,7 @@ As soon as the `updateEntity` call is processed, your block will be re-rendered 
 If you’re using the `custom-element` template, you have a helper method to achieve the above:
 
 ```js
-this.updateSelf({ name: "Bob" });
+this.updateSelfProperties({ name: "Bob" });
 ```
 
 ### Exploring the data store
