--- a/apps/site/src/_pages/docs/2_embedding-blocks.mdx
+++ b/apps/site/src/_pages/docs/2_embedding-blocks.mdx
@@ -1,9 +1,10 @@
 # Embedding Blocks
 
-## Get in touch
+Apps and frameworks can allow their users to insert Þ blocks themselves by becoming an "embedder".
 
-**Interested in embedding blocks in your application?**
+## Instructions for embedders
 
-We are actively looking for embedding application partners who would like to extend their interfaces with blocks.
+We're still in the process of writing up docs that will outline the Þ integration process for embedders.
 
-Please reach out via the [contact form](https://blockprotocol.org/contact) and we will be in touch.
+- If you're interested in embedding blocks within your application now, please [contact us](https://blockprotocol.org/contact) directly with more information about your intended use, and we'll be in touch.
+- If you'd prefer to register for future updates, please [sign up on the website](https://blockprotocol.org/signup) instead.
