--- a/apps/site/src/_pages/docs/2_embedding-blocks.mdx
+++ b/apps/site/src/_pages/docs/2_embedding-blocks.mdx
@@ -6,5 +6,9 @@ Apps and frameworks can allow their users to insert Þ blocks themselves by beco
 
 We're still in the process of writing up docs that will outline the Þ integration process for embedders.
 
-- If you're interested in embedding blocks within your application now, please [contact us](https://blockprotocol.org/contact) directly with more information about your intended use, and we'll be in touch.
-- If you'd prefer to register for future updates, please [sign up on the website](https://blockprotocol.org/signup) instead.
+- If you're interested in supporting the Block Protocol within your application now, allowing your users to insert and use blocks from the [Þ Hub](https://blockprotocol.org/hub), please [contact us](https://blockprotocol.org/contact) with more information about your intended use, and we'll be in touch.
+- If you'd prefer to get updated when our docs are more stable and generally available, please [register for updates](https://blockprotocol.org/signup) on the website instead.
+
+## Instructions for users
+
+If you're looking to _use_ Block Protocol blocks on your website, or in another app, please see our page on [using blocks](https://blockprotocol.org/docs/using-blocks).
