--- a/apps/site/src/_pages/docs/2_embedding-blocks.mdx
+++ b/apps/site/src/_pages/docs/2_embedding-blocks.mdx
@@ -4,10 +4,10 @@ Apps and frameworks can allow their users to insert Þ blocks themselves by beco
 
 ## Instructions for embedders
 
-We're still in the process of writing up docs that will outline the Þ integration process for embedders.
+We're still determining how best to support potential embedders. Until we have public documentation written up and on this page:
 
-- If you're interested in supporting the Block Protocol within your application now, allowing your users to insert and use blocks from the [Þ Hub](https://blockprotocol.org/hub), please [contact us](https://blockprotocol.org/contact) with more information about your intended use, and we'll be in touch.
-- If you'd prefer to get updated when our docs are more stable and generally available, please [register for updates](https://blockprotocol.org/signup) on the website instead.
+1. If you're interested in supporting the Block Protocol within your application now, allowing your users to insert and use blocks from the [Þ Hub](https://blockprotocol.org/hub), please [contact us](https://blockprotocol.org/contact) with more information about your intended use, and we'll be in touch.
+1. If you'd prefer to get updated when our docs are generally available, please [register for updates](https://blockprotocol.org/signup) on the website instead.
 
 ## Instructions for users
 
