--- a/apps/site/src/_pages/docs/3_using-blocks.mdx
+++ b/apps/site/src/_pages/docs/3_using-blocks.mdx
@@ -12,4 +12,6 @@ The [Block Protocol for Wordpress](https://blockprotocol.org/wordpress) plugin a
 
 ## Other environments
 
-If you're implementing support for the Block Protocol in another application or framework that you'd like to see mentioned here, please feel free to [reach out](https://blockprotocol.org/contact).
+Support for additional embedding environments will arrive throughout 2023.
+
+If you're looking to implement support for the Block Protocol in another application or framework that you'd like to see mentioned here, read more about [embedding blocks](https://blockprotocol.org/docs/embedding-blocks) and feel free to [reach out](https://blockprotocol.org/contact) to us.
