--- a/apps/site/src/_pages/docs/5_faq.mdx
+++ b/apps/site/src/_pages/docs/5_faq.mdx
@@ -74,6 +74,14 @@ HASH started life as a [simulation platform](https://hash.ai/simulations), offer
 The Block Protocol advances HASH’s mission by encouraging both data itself and the tools that edit and visualize data to be structured and portable. This makes it easier to work with more data in more places, and unlocks more functionality for more users, increasing the ability for people to understand and learn from the world.
 
 </FAQ>
+  
+<FAQ question="How is the Block Protocol licensed?">
+
+**The Block Protocol itself is completely open-source, and is dually available under both the _MIT License_ and _Apache 2.0_ License, at your option.** This means that you're free to use any of the base code however you like, in line with those licenses, for example by implementing support for the Block Protocol in your own application.
+
+Specific implementations of the Block Protocol in other applications may be kept private, or released under a license of the publisher's choosing (e.g. both the WordPress and Figma plugins use the _Elastic License_).
+
+</FAQ>
 
 </Box>
 
