Add Figma and GitHub as upcoming supported envs

--- a/apps/site/src/_pages/docs/3_using-blocks.mdx
+++ b/apps/site/src/_pages/docs/3_using-blocks.mdx
@@ -2,15 +2,27 @@
 
 Block Protocol blocks are available in a number of embedding environments.
 
-## HASH
+## Now available
+
+### HASH
 
 [HASH](https://hash.ai) is a block-based knowledge management, business intelligence and tool-building application. The hosted app is currently in private beta, and a publicly available version can be [found on GitHub](https://github.com/hashintel/hash) to self-host.
 
-## WordPress
+### WordPress
 
-The [Block Protocol for Wordpress](https://blockprotocol.org/wordpress) plugin adds support for Þ blocks within the existing WordPress Gutenberg editor. It is currently available for [early access testing](https://blockprotocol.org/wordpress), and will become generally available in February 2023 alongside version 0.3 of the Block Protocol specification.
+The [Block Protocol for Wordpress](https://blockprotocol.org/wordpress) plugin adds support for Þ blocks within the existing WordPress Gutenberg editor. It is currently available for [early access testing](https://blockprotocol.org/wordpress), and will become generally available at the end of February 2023 alongside version 0.3 of the Block Protocol specification.
 
-## Other environments
+## Coming soon
+
+### GitHub Blocks
+
+**We are in the early stages of building out support for Block Protocol blocks in _GitHub_.** Blocks are currently only available in GitHub as part of the _GitHub Next_ early release program, but ultimately this should allow blocks you develop in accordance with the Block Protocol spec to be used within GitHub markdown READMEs interactively, and elsewhere on _GitHub.com_.
+
+### Figma
+
+**We are planning support for Block Protocol blocks in both _Figma_ and _Figjam_.** Development has not yet begun. If you are interested in getting involved, please let us know on [our Discord](https://blockprotocol.org/discord).
+
+### Other environments
 
 Support for additional embedding environments will arrive throughout 2023.
 
