--- a/apps/site/src/_pages/docs/0_index.mdx
+++ b/apps/site/src/_pages/docs/0_index.mdx
@@ -2,7 +2,7 @@
 
 ## Overview
 
-The Block Protocol (Þ) is an open standard for building block-based interfaces. It enables applications to make their interfaces extensible with interoperable components: blocks.
+The Block Protocol (**Þ**) is an open standard for building block-based interfaces. It enables applications to make their interfaces extensible with interoperable components: blocks.
 
 The following pages provide a practical introduction for:
 
@@ -24,7 +24,7 @@ Blocks can be added to webpages using plain HTML and/or JavaScript. Some modern 
 
 From a developer perspective, blocks encapsulate a set of specific functionality. Building a block is no different to writing a React, Vue, or [Web Component](https://en.wikipedia.org/wiki/Web_Components) – in fact, these are all ways you might implement a block. They are reusable elements that expect certain data to be passed to them (what we refer to as a block’s ‘schema’). For example, an image block might only accept an image URL in its `src` property, not a number.
 
-## What is a Block Protocol block?
+## What is a Þ block?
 
 Any block can become a Þ block by meeting the requirements defined in the specification. These requirements define what data a block can accept and how they're allowed to interact with that data. This standardized approach makes it possible to use and embed Þ blocks across any different kind of web application, provided it supports the protocol.
 
