--- a/apps/site/src/_pages/docs/0_index.mdx
+++ b/apps/site/src/_pages/docs/0_index.mdx
@@ -8,7 +8,7 @@ The following pages provide a practical introduction for:
 
 - developers who want to [build blocks](https://blockprotocol.org/docs/developing-blocks) and publish them to the [Þ Hub](https://blockprotocol.org/hub)
 - developers who want to support [embedding blocks](https://blockprotocol.org/docs/embedding-blocks) within their applications
-- users who want to [use blocks](https://blockprotocol.org/docs/using-blocks) within protocol-compliant applications
+- users who want to [use blocks](https://blockprotocol.org/docs/using-blocks) within Þ-compliant applications
 
 If you have any questions, [please open or contribute to a discussion](https://github.com/blockprotocol/blockprotocol/discussions). You can also [chat to us on Discord](https://blockprotocol.org/discord).
 
