--- a/apps/site/src/_pages/docs/0_index.mdx
+++ b/apps/site/src/_pages/docs/0_index.mdx
@@ -4,11 +4,11 @@
 
 The Block Protocol (**Þ**) is an open standard for building block-based interfaces. It enables applications to make their interfaces extensible with interoperable components: blocks.
 
-The following pages provide a practical introduction for:
+The following pages provide a practical introduction for those:
 
-- developers who want to [build blocks](https://blockprotocol.org/docs/developing-blocks) and publish them to the [Þ Hub](https://blockprotocol.org/hub)
-- developers who want to support [embedding blocks](https://blockprotocol.org/docs/embedding-blocks) within their applications
-- users who want to [use blocks](https://blockprotocol.org/docs/using-blocks) within Þ-compliant applications
+- [using blocks](https://blockprotocol.org/docs/using-blocks) within applications that support the Block Protocol
+- [building blocks](https://blockprotocol.org/docs/developing-blocks) and publishing them to the [Þ Hub](https://blockprotocol.org/hub)
+- [building block-based applications](https://blockprotocol.org/docs/embedding-blocks) that leverage the Block Protocol
 
 If you have any questions, [please open or contribute to a discussion](https://github.com/blockprotocol/blockprotocol/discussions). You can also [chat to us on Discord](https://blockprotocol.org/discord).
 
