--- a/apps/site/src/_pages/docs/0_index.mdx
+++ b/apps/site/src/_pages/docs/0_index.mdx
@@ -34,4 +34,7 @@ The Block Protocol is free to use, and any application can enable the use of Þ 
 
 ## What is the Þ Hub?
 
-Blocks and types can be published and discovered on the [Þ Hub](https://blockprotocol.org/hub), an open-source registry that anybody can use.
+Blocks and types can be published and discovered on the [Þ Hub](https://blockprotocol.org/hub), an open-source registry that anybody can use. It can be accessed one of two ways:
+
+1. **in-browser** by navigating to [`blockprotocol.org/hub`](https://blockprotocol.org/hub).
+2. **programmatically** by generating a free API key. Either a user or an embedding application must provide this in order to query and load blocks from the Þ Hub.
