--- a/apps/site/src/_pages/docs/0_index.mdx
+++ b/apps/site/src/_pages/docs/0_index.mdx
@@ -34,7 +34,9 @@ The Block Protocol is free to use, and any application can enable the use of Þ 
 
 ## What is the Þ Hub?
 
-Blocks and types can be published and discovered on the [Þ Hub](https://blockprotocol.org/hub), an open-source registry that anybody can use. It can be accessed one of two ways:
+Blocks and types can be published and discovered on the [Þ Hub](https://blockprotocol.org/hub), an open-source registry that anybody can use. There are two ways to access it:
 
-1. **in-browser** by navigating to [`blockprotocol.org/hub`](https://blockprotocol.org/hub).
-2. **programmatically** by generating a free API key. Either a user or an embedding application must provide this in order to query and load blocks from the Þ Hub.
+- **in-browser** by navigating to [`blockprotocol.org/hub`](https://blockprotocol.org/hub): no account is required to browse and test blocks
+- **programmatically** from within other applications: either a user or an embedding application must create a free API key in order to query and load blocks from the Þ Hub via its API
+
+The Þ Hub provides a persistent, reliable, and open-source single point of reference for the discovery of new content. This means creators only need to publish once, while embedding applications can easily discover new blocks, types and endpoints, making them instantly available to their own users.
