--- a/apps/site/src/_pages/docs/3_using-blocks.mdx
+++ b/apps/site/src/_pages/docs/3_using-blocks.mdx
@@ -9,7 +9,7 @@ Block Protocol blocks are available in a number of embedding environments.
 HASH is a block-based knowledge management, business intelligence and tool-building application.
 
 - The hosted version of HASH is [available for early access](https://hash.ai) and is in alpha
-- HASH is open-source, and its code can be downloaded from the [`hashintel/hash` GitHub repository](https://github.com/hashintel/hash)
+- HASH is open source, and its code can be downloaded from the [`hashintel/hash` GitHub repository](https://github.com/hashintel/hash)
 
 ### WordPress
 
