--- a/apps/site/src/_pages/docs/0_index.mdx
+++ b/apps/site/src/_pages/docs/0_index.mdx
@@ -39,4 +39,4 @@ Blocks and types can be published and discovered on the [Þ Hub](https://blockpr
 - **in-browser** by navigating to [`blockprotocol.org/hub`](https://blockprotocol.org/hub): no account is required to browse and test blocks
 - **programmatically** from within other applications: either a user or an embedding application must create a free API key in order to query blocks from the Þ Hub via its API
 
-The Þ Hub provides a persistent, reliable, and open-source single point of reference for the discovery of new content. This means creators only need to publish once, while embedding applications can easily discover new blocks, types and endpoints, making them instantly available to their own users.
+The Þ Hub provides a single persistent, reliable, and open-source point of reference for the discovery of new content. This means creators only need to publish once, while embedding applications can easily discover new blocks, types and endpoints, making them instantly available to their own users.
